--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1060,6 +1060,7 @@
 		"r_u_sure_want_book_appointment":"Вы действительно хотите записаться на эту встречу?",
 		"r_u_sure_remove_patient":"Вы уверены, что удалите пациента?",
 		"cancel_inquiry":"Отменить запрос?",
-		"r_u_sure_cancel_inquiry":"Вы действительно хотите отменить этот запрос?"
+    "r_u_sure_cancel_inquiry":"Вы действительно хотите отменить этот запрос?",
+    "download_file":"Скачать файл"
   }
 }
