--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -5,7 +5,7 @@
 		"login_LOGIN_btn": "INGIA KATIKA",
 		"login_an_account": "je, si kuwa na akaunti?",
 		"login_Registerhere": "Kujiandikisha hapa",
-		"reg_content": "reg_content",
+		"reg_content": "Sajili yaliyomo",
 		"Register_for_Aimedis": "Kujiandikisha kwa ajili ya Aimedis V2",
 		"Register_Name": "Jina",
 		"Register_email": "anwani",
@@ -22,7 +22,7 @@
 		"Register_Passwordshould": "Password lazima iwe na angalau:",
 		"Register_characters": "8 wahusika",
 		"Register_letter": "1 barua",
-		"forget_pass": "Alisahau Password",
+		"forget_pass": "Kusahau Nenosiri",
 		"Register_number": "1 idadi",
 		"Register_special": "tabia maalum 1",
 		"recruitmentemp_content": "kuajiri wafanyakazi",
@@ -56,17 +56,17 @@
 		"want_to_register": "nataka kujiandikisha kwa Aimedis afya jarida (hiari).",
 		"I_agree_to_our": "Kwa kubonyeza sanduku mimi kukubaliana na masharti yetu ya matumizi na kukubali ukusanyaji wa takwimu, data usindikaji na matumizi ya yangu binafsi data. Zaidi katika sera yetu ya faragha.",
 		"Staff_SENDREC": "KUTUMA FOMU ya AJIRA",
-		"profile": "Profile",
+		"profile": "Profaili",
 		"informmation": "Habari",
 		"profile_info": "Hii ni yako profile habari, ambayo ni kupatikana kwa yako kuaminiwa Madaktari na wale wewe kushiriki maelezo yako ID nad SIRI na.",
 		"ID": "ID",
 		"speciality": "umaalum",
 		"pin": "SIRI",
 		"kufanyika": "Kosa",
-		"browse": "Browse",
+		"browse": "Vinjari",
 		"or_drag_here": "au drag hapa",
 		"suported_file_type": "Mkono faili aina",
-		"QR_code": "QR code",
+		"QR_code": "Nambari ya QR",
 		"Change": "Kubadili",
 		"Visibilty": "Kujulikana",
 		"edit_id_pin": "unaweza kubadili ID yako na PIN kama mara nyingi kama unataka.",
@@ -88,7 +88,7 @@
 		"add": "Mitaani",
 		"street": "Mitaani unapotoka",
 		"city": "Mji",
-		"postal_code": "code ya Posta",
+		"postal_code": "Nambari ya posta",
 		"country": "Nchi",
 		"home_telephone": "Nyumbani namba ya simu",
 		"phone": "simu",
@@ -103,20 +103,20 @@
 		"company": "kampuni",
 		"of": "bila",
 		"info_copied": "Habari ni Kunakiliwa",
-		"profile_updated": "Profile ni updated",
-		"profile_not_updated": "Profile si updated. Hawezi kufikia kwa server",
+		"profile_updated": "Profaili imesasishwa",
+		"profile_not_updated": "Profaili haijasasishwa. Imeshindwa kufikia seva",
 		"mobile_number_not_valid": "Simu ya mkononi ni si halali",
 		"insurance_added": "Insuranse aliongeza kwa Mafanikio.",
 		"number": "nambari",
 		"Delete": "Futa",
-		"de_archive": "De-archive",
-		"password": "Password",
+		"de_archive": "Hifadhi jalada",
+		"password": "Nenosiri",
 		"supportive_text": "Mkono wa maandishi kama hii inaweza kuongezwa kama inahitajika.",
 		"Current": "Sasa",
-		"new_password": "password Mpya",
-		"confirm_password": "Confirm password mpya",
+		"new_password": "Nenosiri mpya",
+		"confirm_password": "Thibitisha nywila mpya",
 		"two_fac_auth": "2-sababu uthibitishaji",
-		"password_changed": "Password ni iliyopita",
+		"password_changed": "Nenosiri limebadilishwa",
 		"new_and_confirm_pass_not_same": "Mpya password na kuthibitisha password ni si sawa",
 		"current_pass_not_match": "Sasa password ni si vinavyolingana",
 		"plz_fill_fields": "Tafadhali kujaza mashamba",
@@ -142,11 +142,11 @@
 		"add_to_trusted_doc": "Kuongeza kwa Kuaminiwa Madaktari",
 		"recmonded_doc": "Ilipendekeza Madaktari",
 		"doc_who_part_of_aimedis": "Madaktari ambao ni sehemu ya Aimedis jukwaa.",
-		"free_text": "Free Nakala",
-		"forget_password": "Kusahau Password",
+		"free_text": "Nakala ya bure",
+		"forget_password": "Kusahau Nenosiri",
 		"plz_enter_valid_email": "Tafadhali Kuingia Halali ya barua Pepe",
-		"format_updated": "Format ni updated",
-		"blockchain_secure_organ_donar_Pass": "Blockchain kuulinda chombo wafadhili kupita",
+		"format_updated": "Muundo umesasishwa",
+		"blockchain_secure_organ_donar_Pass": "Kupitishwa kwa mtoaji wa chombo kilicholindwa na blockchain",
 		"easily_select_donar": "Hapa unaweza kwa urahisi kuchagua kwa kuwa na chombo wafadhili au si wakati wowote.",
 		"organ_transplant_declaration": "Katika kesi ya chombo / tishu ya mgodi ni kuchukuliwa kuwa kuatikwa baada ya kifo changu, mimi kwayo kutangaza: ",
 		"organ_tissue": "Chombo / Tishu",
@@ -158,7 +158,7 @@
 		"specify00000_kind_of_right_management": "Tafadhali bayana nini aina ya haki ya usimamizi wa unapendelea? ",
 		"automatically_hidden_content": "bidhaa mpya ni moja kwa moja SIRI kwa Madaktari & Wauguzi katika kesi ya mara kwa mara profile upatikanaji (PIN & ID) & lazima manually kufanywa INAYOONEKANA na mimi (KUONYESHA DAIMA au KUONYESHA MPAKA TAREHE MAALUM.)",
 		"automatically_visible_content": "bidhaa mpya ni moja kwa moja INAYOONEKANA kwa Madaktari & Wauguzi katika kesi ya mara kwa mara profile upatikanaji (PIN & ID) & lazima manually kufanywa ASIYEONEKANA na mimi (DAIMA KUJIFICHA au KUFICHA MPAKA TAREHE MAALUM.)",
-		"Opt_Out": "Opt-Out",
+		"Opt_Out": "Chagua kutoka",
 		"Opt_In": "Opt-Katika",
 		"apply_right_management_for_all_items": "Kuomba haki ya usimamizi wa mazingira ya Vitu VYOTE",
 		"plz_mention_date_time": "Tafadhali kutaja tarehe-muda kwa ajili ya mpaka",
@@ -173,9 +173,9 @@
 		"plz_uplod_doc": "Tafadhali Upload Nyaraka",
 		"plz_fill_all_fields": "Tafadhali kujaza katika nyanja zote",
 		"plz_accept_term": "Tafadhali kukubali Masharti na Sera ya",
-		"updated_success": "updated mafanikio",
+		"updated_success": "imesasishwa kwa mafanikio",
 		"file_uploaded": "Faili ni uploaded kwa mafanikio",
-		"upload_id_card": "Upload picha ya ID yako Kadi",
+		"upload_id_card": "Pakia picha ya Kadi yako ya Kitambulisho",
 		"by_clicking_accept_aimedis_term": "Kwa kubonyeza hii, wewe kukubali Aimeidis masharti na sera ya faragha yake",
 		"attached_doc": "Masharti ya Hati",
 		"u_r_nvr_obligate_to_upload_doc": "Wewe ni kamwe wajibu wa kupakia leseni yako au nyingine yoyote ya ushahidi ya ID.",
@@ -184,10 +184,10 @@
 		"edit_entry": "Hariri kuingia",
 		"heart_rate": "Kiwango cha Moyo",
 		"time": "Wakati",
-		"format": "format",
+		"format": "muundo",
 		"set_the_default": "Kuweka default",
 		"the": "the",
-		"updated": "updated",
+		"updated": "imesasishwa",
 		"my_doc": "Documents zangu",
 		"prescription": "Dawa",
 		"sick_cert": "Wagonjwa Cheti",
@@ -214,7 +214,7 @@
 		"r_u_tracking_medi": "je, wewe Ni kuchukua dawa yoyote",
 		"do_u_hv_allergies": "Je, una mizio yoyote",
 		"ur_profession": "Taaluma Yako",
-		"Annotations": "Annotations",
+		"Annotations": "Maelezo",
 		"maelezo": "maelezo",
 		"maswali": "maswali",
 		"is_this_follow_pres": "Ni hii na kufuata-up ya dawa",
@@ -259,11 +259,11 @@
 		"devices": "Vifaa",
 		"services": "Huduma",
 		"search_for_device_palce": "Tafuta kwa ajili ya kifaa au huduma yako jina...",
-		"view_details": "View Maelezo",
+		"view_details": "Angalia maelezo",
 		"Details": "Maelezo",
 		"Questions": "Maswali",
-		"book": "book",
-		"logout": "logout",
+		"book": "kitabu",
+		"logout": "kuondoka",
 		"view_data": "Mtazamo data",
 		"disconect_device": "Kukatwa kifaa",
 		"distance": "Umbali",
@@ -279,7 +279,7 @@
 		"no_device_connctd": "Hakuna vifaa kushikamana",
 		"ur_connected_device_appear": "Yako kushikamana vifaa itaonekana hapa",
 		"connct_a_device": "Kuungana kifaa",
-		"blockchain_access_log": "Blockchain Kupata Logi",
+		"blockchain_access_log": "Logi ya upatikanaji wa blockchain",
 		"profile_setting": "Mipangilio ya Profaili",
 		"log_type": "Ingia aina",
 		"created_by": "Kuundwa kwa",
@@ -377,7 +377,7 @@
 		"we_hv_prpared_short_introductry": "tumekuwa tayari utangulizi mfupi video ambayo kiasi kikubwa cha fedha kwa faida ya wote",
 		"u_get_from_aimedis": "wewe kupata kutoka kwa kutumia Aimedis jukwaa.",
 		"entry_example": "Kuingia mfano",
-		"journal_entry": "Journal ya kuingia",
+		"journal_entry": "Kuingia kwa Jarida",
 		"example": "Mfano",
 		"mild_depresive_episode": "Kali ya huzuni sehemu",
 		"team": "Timu",
@@ -449,9 +449,9 @@
 		"temp_headech": "hali ya Joto na maumivu ya kichwa",
 		"open": "Wazi",
 		"date_of_dignose": "Tarehe ya kutambua",
-		"show_entry": "Show kuingia hii",
+		"show_entry": "Onyesha kuingia",
 		"hide_entry": "Kujificha kuingia hii",
-		"show_after": "baada ya Show",
+		"show_after": "Onyesha baada ya",
 		"slct_time_slot": "Kuchagua wakati yanayopangwa",
 		"likizo": "Likizo",
 		"appointment_booked": "Uteuzi kadi mafanikio",
@@ -486,15 +486,15 @@
 		"time_format": "Wakati format",
 		"date_format": "Tarehe format",
 		"view_emrgncy_data": "Mtazamo wa Dharura Data",
-		"my_profile": "Profile Yangu",
+		"my_profile": "Profaili yangu",
 		"male": "Mwanaume",
 		"female": "Kike",
 		"other": "Nyingine",
-		"change_password": "Mabadiliko ya password",
+		"change_password": "Badilisha neno la siri",
 		"all_course": "Kozi Yote",
 		"my_course": "Kozi Yangu",
 		"new_course": "Kozi Mpya",
-		"topic_all": "Topic: Wote",
+		"topic_all": "Mada: Yote",
 		"language_eng": "Lugha: kiingereza",
 		"what_diabetes": "ni Nini ugonjwa wa Kisukari",
 		"add_to_cart": "Kuongeza kwa gari",
@@ -676,7 +676,7 @@
 		"ICD_10_GM": "ICD-10 GM",
 		"timeline_filters": "Ratiba ya Filters",
 		"rate_this_course": "Kiwango cha kozi hii",
-		"ok_and_close": "Ok na Karibu",
+		"ok_and_close": "Sawa na Funga",
 		"save_and_cont": "Kuokoa na kuendelea",
 		"clear_filters": "Wazi filters",
 		"health_profile": "Afya Profile",
@@ -744,14 +744,14 @@
 		"dismiss": "Achana nayo",
 		"add_as_trusted": "Kuongeza kama kuaminiwa",
 		"add_successfully": "Aliongeza mafanikio",
-		"block_chain": "Blockchain Upatikanaji",
+		"block_chain": "Ufikiaji wa blockchain",
 		"terms": "Suala",
 		"insurance_comp": "Kampuni ya Bima",
 		"insurance_num": "Bima ya Idadi",
 		"street_address": "na Anwani ya Mitaani",
 		"privacy_policy": "Sera ya faragha",
-		"aimedis_online_cour": "Aimedis Kozi Online",
-		"tracker_self": "Trackers & Binafsi Data",
+		"aimedis_online_cour": "Kozi ya mkondoni ya Aimedis",
+		"tracker_self": "Wafuatiliaji na data ya Iot",
 		"settings": "Mipangilio",
 		"organ_doner": "Chombo Wafadhili",
 		"right_mgnt": "Haki ya usimamizi",
@@ -807,11 +807,11 @@
 		"unable_to_update": "Hawawezi update",
 		"enter_your_pass": "Ingiza Password yako",
 		"payment_unsuccess": "Malipo unsccuessfull",
-		"ordered_unsuccess": "Orderd Mafanikio.",
+		"ordered_unsuccess": "Imeagizwa kwa mafanikio.",
 		"ordered_cant": "Amri ya Hawezi kuwa nafasi bado!",
 		"dont_have_acc": "Je, si kuwa na akaunti?",
 		"type_a_msg": "Aina ya ujumbe..",
-		"back_to_screen": "Nyuma ya screen login",
+		"back_to_screen": "Rudi kwenye skrini ya kuingia",
 		"verify_email": "Tafadhali kuthibitisha yako \nE-mail anwani",
 		"aimedis_link": "Kama kuna Aimedis akaunti wanaohusishwa na\n",
 		"email_reset": "barua pepe, tutaweza kutuma zaidi ya miaka \ninstructions upya password yako.",
@@ -822,7 +822,7 @@
 		"open_default": "Fungua Email default ya programu",
 		"did_nt_get": "Hakuwa na kupata barua pepe ya uthibitisho?",
 		"lectures": "mihadhara",
-		"book_v_call": "Kitabu Video wito",
+		"book_v_call": "Kitabu simu ya video",
 		"book_o_visit": "Kitabu ofisi tembelea",
 		"book_consultancy": "Kitabu Ushauri",
 		"select_time_from": "Chagua muda(kutoka)",
@@ -912,7 +912,7 @@
 		"term_of_use": " Masharti ya Matumizi",
 		"two_days_ago": "siku 2 iliyopita",
 		"three_to_6_days_ago": "3-6 siku iliyopita",
-		"updated_track": "Updated kufuatilia",
+		"updated_track": "Wimbo uliosasishwa",
 		"added_success": "Aliongeza kwa mafanikio...",
 		"sick_cert_found": "Wagonjwa cheti data kupatikana",
 		"sick_cert_not_found": "Wagonjwa cheti data si kupatikana",
@@ -942,7 +942,7 @@
 		"plz_selct_pdf": "Tafadhali chagua tu pdf, jpg, png aina ya faili.",
 		"agree_on": "Tafadhali kukubaliana juu ya masharti yetu na masharti",
 		"all_required": "Yote ya shamba ni required.",
-		"password_up": "Password imesasishwa",
+		"password_up": "Nenosiri limesasishwa",
 		"select_lang": "Chagua lugha",
 		"exit_amedis": "Toka Aimedis",
 		"want_to_exit": "Je, unataka kutoka?",
@@ -961,7 +961,7 @@
 		"remove_this": "Je, kweli unataka kuondoa hii?",
 		"cancel_this": "Je, kweli unataka kufuta hii?",
 		"are_u_sure": "Je, wewe na uhakika wa update hii Uchunguzi?",
-		"update_inquery": "Update inquery",
+		"update_inquery": "Sasisha uchunguzi",
 		"dearchive_entry_q": "Je, kweli unataka dearchive kuingia hii",
 		"delete_for_msg": "Je, kweli unataka Kufuta kuingia hii? Hii ina maana itakuwa kufuta milele",
 		"make_personilized_acc": "kufanya akaunti yako zaidi msako, kuongeza picha yako profile. Itakuwa tu kuwa wazi kwa wewe na watu katika kundi lako.",
@@ -1056,6 +1056,7 @@
 		"r_u_sure_want_book_appointment":"Je! Una uhakika unataka kuweka nafasi hii?",
 		"r_u_sure_remove_patient":"Je! Una uhakika wa kumuondoa Mgonjwa?",
 		"cancel_inquiry":"Ghairi Uchunguzi?",
-		"r_u_sure_cancel_inquiry":"Je! Una uhakika wa kughairi uchunguzi huu?"
+		"r_u_sure_cancel_inquiry":"Je! Una uhakika wa kughairi uchunguzi huu?",
+		"download_file":"Pakua faili"
 	}
 }
