--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1062,6 +1062,7 @@
 		"r_u_sure_remove_patient":"Sind Sie sicher, den Patienten zu entfernen?",
 		"cancel_inquiry":"Anfrage abbrechen?",
 		"r_u_sure_cancel_inquiry":"Sind Sie sicher, diese Anfrage abzubrechen?",
-		"download_file":"Download-Datei"
+		"download_file":"Download-Datei",
+		"consultancy_appintment":"Beratungstermin"
 	}
 }
