--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1059,6 +1059,7 @@
 		"r_u_sure_remove_patient":"Are you sure to remove the Patient?",
 		"cancel_inquiry":"Cancel the Inquiry ?",
 		"r_u_sure_cancel_inquiry":"Are you sure  to cancel this Inquiry?",
-		"download_file":"Download File"
+		"download_file":"Download File",
+		"consultancy_appintment":"Consultancy Appointment"
 		}
 }
