--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1057,6 +1057,7 @@
 		"r_u_sure_remove_patient":"Je! Una uhakika wa kumuondoa Mgonjwa?",
 		"cancel_inquiry":"Ghairi Uchunguzi?",
 		"r_u_sure_cancel_inquiry":"Je! Una uhakika wa kughairi uchunguzi huu?",
-		"download_file":"Pakua faili"
+		"download_file":"Pakua faili",
+		"consultancy_appintment":"Uteuzi wa Ushauri"
 	}
 }
