Add new journal functionality, and white archive page issues

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1057,6 +1057,9 @@
 		"r_u_sure_remove_patient":"您确定要移除患者吗？",
 		"cancel_inquiry":"取消查询？",
 		"r_u_sure_cancel_inquiry":"您确定要取消此查询吗？",
-		"download_file":"下载文件"
+		"download_file":"下载文件",
+		"Select_chat":"选择一个聊天开始消息",
+		"Search" :"搜索",
+		"Date_of_event" :"活动日期"
 	}
 }
