--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1058,6 +1058,9 @@
 		"r_u_sure_remove_patient":"Are you sure to remove the Patient?",
 		"cancel_inquiry":"Cancel the Inquiry ?",
 		"r_u_sure_cancel_inquiry":"Are you sure  to cancel this Inquiry?",
-		"download_file":"Download File"
+		"download_file":"Download File",
+		"Select_chat" :"Select a chat to start messaging",
+		"Search" :"Search",
+		"Date_of_event" :"Date of event"
 		}
 }
