--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1063,6 +1063,9 @@
 		"r_u_sure_remove_patient":"Tem certeza de que deseja remover o paciente?",
 		"cancel_inquiry":"Cancelar o inquérito?",
 		"r_u_sure_cancel_inquiry":"Tem certeza que deseja cancelar esta Consulta?",
-		"download_file":"⇬ Fazer download do arquivo"
+		"download_file":"⇬ Fazer download do arquivo",
+		"Select_chat":"Selecione um bate-papo para começar a enviar mensagens",
+		"Search" :"Pesquisa",
+		"Date_of_event" :"Data do evento"
 	}
 }
