--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1061,6 +1061,9 @@
 		"r_u_sure_remove_patient":"Вы уверены, что удалите пациента?",
 		"cancel_inquiry":"Отменить запрос?",
     "r_u_sure_cancel_inquiry":"Вы действительно хотите отменить этот запрос?",
-    "download_file":"Скачать файл"
+    "download_file":"Скачать файл",
+    "Select_chat":"Выберите чат, чтобы начать обмен сообщениями",
+    "Search" :"Поиск",
+    "Date_of_event" :"Дата мероприятия"
   }
 }
