--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -30,6 +30,7 @@
 		"YOUR_CONTACT_INFO": "您的联系方式",
 		"recEmp_Emailaddress": "电子邮件地址",
 		"recEmp_FirstName": "名字",
+		"select": "选择",
 		"recEmp_LastName": "姓氏",
 		"recEmp_phone": "电话号码（可选)",
 		"recEmp_yuProf": "你的职业",
@@ -1035,6 +1036,7 @@
 		"medicine_handed_to_patient": "交给病人的药",
 		"img_files":"图片和文件",
 		"Explanation":"说明",
+		"Medications":"药物治疗",
 		"r_u_sure_remove_doctor":"您确定要从信任医生中删除医生吗？",
 		"paymnt_processed":"付款已成功处理",
 		"paymnt_err":"付款错误",
@@ -1050,7 +1052,11 @@
 		"plz_check_unread_message_in_chat":"聊天中未读的消息。请检查一下。",
 		"new_message_in_chat_plz_check":"聊天模块中的新消息。请转到聊天（链接）以检查您的消息。",
 		"remove_inquiry":"删除查询？",
-
+		"Pending": "待定",
+		"Rejected": "拒绝",
+		"Answered": "已回答",
+		"sent": "已发送",
+		"Cancelled":"取消",
 		"archive_item":"存档项目",
 		"do_u_really_want_archive_item":"您真的要存档该项目吗？",
 		"delete_item":"删除项目",
@@ -1061,6 +1067,75 @@
 		"cancel_inquiry":"取消查询？",
 		"r_u_sure_cancel_inquiry":"您确定要取消此查询吗？",
 		"download_file":"下载文件",
-		"consultancy_appintment":"顾问委任"
+		"consultancy_appintment":"顾问委任",
+
+
+
+		"are_u_sue_appo": "您确定要预订此预定吗？",
+		"Appointment": "约定",
+		"activities": "活动项目",
+		"Upcoming": "即将来临",
+		"Past": "过去",
+		"google_calendar": "Google日历",
+		"outlook_calendar": "Outlook日历",
+		"Calendar": "日历",
+		"update_the_inquiry": "更新查询？",
+		"remove_the_inquiry": "您确定要删除此查询吗？",
+		"sick_certificate_inquiry": "Sick Certificate Inquiry",
+		"second_opinion_inquiry": "Second Opinion Inquiry",
+		"medicine_inquiry": "Medicine inquiry",
+		"Approve": "Approve",
+		"decline_inquiry": "Decline Inquiry",
+		"Inquiries": "Inquiries",
+		"Prescriptions": "Prescriptions",
+		"Sick_Certificates": "Sick Certificates",
+		"Second_Opinions": "Second Opinions",
+		"not_mention": "Not mention",
+		"are_u_sure_patient": "Are you sure to remove the Patient?",
+		"error_in_getting": "Error in getting information",
+		"plz_enter": "Please enter the email or id of the patient",
+		"patient_data_rqust": "Patient Data Request",
+		"email_or_p_id": "Email or Patient ID",
+		"invite_dr_to_aimedis": "Invite doctors to aimedis",
+		"emergency_access": "Emergency Access",
+		"invalid": "invalid ,please enter valid email",
+		"plz_enter_email": "Please enter email",
+		"all_field_complesry": "*All field are compplersury",
+		"track_added": "Track added successfully",
+		"you_can": "You can enter multiple email address by putting ',' and as a personal message",
+		"enter_email_with": "Enter email with , seprator",
+		"shortmsg_optional": "Short message(optional)",
+		"search_pharma": "Search pharmacy by name and ID",
+		"show_pharma": "Show Pharmacy within my radius of",
+		"send_pres": "Send Prescription",
+		"latest_infor": "Latest information",
+		"consultan": "Consultancy(custom calender)",
+		"holidays": "Holidays",
+		"set_working_hours": "set Online working hours",
+		"time_slots": "Timeslots",
+		"Timeslot_duration": "Timeslot duration",
+		"Break_time_from": "Break time from",
+		"Break_time_to": "Break time to",
+		"up_to": "Up to",
+		"before_the": "before the time of appointment",
+		"hours": "hours",
+		"minuts": "minuts",
+		"services_appo": "Services & Appointments",
+		"lock": "Lock",
+		"home": "Home",
+		"chat": "Chat",
+		"chat_call": "Chat & Call",
+		"Courses": "Courses",
+		"Select_place": "Select place",
+		"Search_city": "Search(city)",
+		"plz_enter_correct_pass": "Please Enter Valid Current Password",
+		"can_bot_be_same_pass": "Current password and new password can not be same.",
+		"trusted_doctor": "Trusted Doctor",
+		"recommond_doctor": "Recomended Doctor",
+		"date_from": "Date from",
+		"date_to": "Date to",
+		"pls_fill_duration": "Please fill the Time duration of appointment",
+		"minutes": "minutes",
+		"offline": "Offline"
 	}
 }
