--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -702,6 +702,7 @@
 		"how_are_you": "jinsi ni wewe?",
 		"Enter_Diagnosis": "Kuingia Utambuzi",
 		"Problem": "Tatizo",
+		"notes":"Vidokezo",
 		"select_dates": "Chagua Tarehe",
 		"hurts_a_lot": "Machungu mengi",
 		"symp_notes": "Dalili & Maelezo",
@@ -776,7 +777,8 @@
 		"health_status": "Hali ya Afya",
 		"contact_other": "Kuwasiliana & info Nyingine",
 		"no_medication": "Hakuna dawa",
-		"no_allergies": "Hakuna allergy",
+		"no_allergies": "Hakuna mzio",
+		"allergies": "Mishipa",
 		"no_diagnoses": "Hakuna diagnoser",
 		"free_remarks": "Free hotuba",
 		"relation": "Uhusiano",
@@ -991,11 +993,16 @@
 		"trvl_diagnosis": "Utambuzi wa kusafiri",
 		"doc_name": "Jina la Daktari",
 		"DarkMode": "Njia ya Giza",
+		"Medications": "Dawa",
 		"user_type_all": "Aina ya Mtumiaji: Zote",
 		"search_timeline": "Rekodi ya nyakati ya utaftaji",
 		"file_content": "Yaliyomo kwenye faili",
 		"first_day_visit": "Ziara ya Siku ya Kwanza",
 		"suggest_new_time": "Pendekeza wakati mpya",
+		"Pending": "Inasubiri",
+		"Rejected": "Imekataliwa",
+		"Answered": "Akajibu",
+		"Cancelled": "Imeghairiwa",
 		"book_appointment": "Uteuzi wa Kitabu",
 		"type_email_press_enter": "Andika barua pepe na ubonyeze kuingia au tabo",
 		"upload_scanned": "Pakia imechanganuliwa",
@@ -1029,35 +1036,62 @@
 		"rcvd_from_doctor": "Imepokea kutoka kwa daktari",
 		"handled": "Kushughulikiwa",
 		"medicine_handed_to_patient": "Dawa iliyopewa mgonjwa",
-		"img_files":"Picha na Faili",
-		"Explanation":"Maelezo",
-		"r_u_sure_remove_doctor":"Je! Una uhakika wa kumwondoa Daktari kutoka kwa Daktari anayeaminika?",
-		"paymnt_processed":"Malipo yamechakatwa",
-		"paymnt_err":"Hitilafu ya malipo",
-		"pay_with_stripe":"Lipa na Stripe",
-		"frequency":"Mzunguko",
-		"relaxed":"Kupumzika",
-		"stressed":"Amesisitiza",
-		"plz_fill_mob_number":"Tafadhali jaza nambari ya rununu",
-		"pswd_not_valid":"Nenosiri si halali",
-		"plz_fill_fullname_user":"Tafadhali jaza jina kamili la mtumiaji",
-		"plz_enter_email_id_patient":"Tafadhali ingiza barua pepe au kitambulisho cha mgonjwa",
-		"unknown":"Haijulikani",
-		"there_r_the":"Kuna faili za",
-		"plz_check_unread_message_in_chat":"Ujumbe ambao haujasomwa kwenye Gumzo. Tafadhali angalia hii.",
-		"new_message_in_chat_plz_check":"Ujumbe mpya katika moduli ya mazungumzo. Tafadhali nenda kwenye CHAT (kiungo) kukagua ujumbe wako.",
-		"remove_inquiry":"Ondoa Uchunguzi?",
-
-		"archive_item":"Jalada la Bidhaa",
-		"do_u_really_want_archive_item":"Je! Kweli unataka kuhifadhi kipengee?",
-		"delete_item":"Futa kipengee",
-		"do_u_really_want_delete_item":"Je! Kweli unataka kufuta kipengee?",
-		"plz_upload_png_jpeg":"Tafadhali Pakia faili ya PNG na JPEG",
-		"r_u_sure_want_book_appointment":"Je! Una uhakika unataka kuweka nafasi hii?",
-		"r_u_sure_remove_patient":"Je! Una uhakika wa kumuondoa Mgonjwa?",
-		"cancel_inquiry":"Ghairi Uchunguzi?",
-		"r_u_sure_cancel_inquiry":"Je! Una uhakika wa kughairi uchunguzi huu?",
-		"download_file":"Pakua faili",
-		"consultancy_appintment":"Uteuzi wa Ushauri"
+		"img_files": "Picha na Faili",
+		"Explanation": "Maelezo",
+		"r_u_sure_remove_doctor": "Je! Una uhakika wa kumwondoa Daktari kutoka kwa Daktari anayeaminika?",
+		"paymnt_processed": "Malipo yamechakatwa",
+		"paymnt_err": "Hitilafu ya malipo",
+		"pay_with_stripe": "Lipa na Stripe",
+		"frequency": "Mzunguko",
+		"relaxed": "Kupumzika",
+		"stressed": "Amesisitiza",
+		"plz_fill_mob_number": "Tafadhali jaza nambari ya rununu",
+		"pswd_not_valid": "Nenosiri si halali",
+		"plz_fill_fullname_user": "Tafadhali jaza jina kamili la mtumiaji",
+		"plz_enter_email_id_patient": "Tafadhali ingiza barua pepe au kitambulisho cha mgonjwa",
+		"unknown": "Haijulikani",
+		"there_r_the": "Kuna faili za",
+		"plz_check_unread_message_in_chat": "Ujumbe ambao haujasomwa kwenye Gumzo. Tafadhali angalia hii.",
+		"new_message_in_chat_plz_check": "Ujumbe mpya katika moduli ya mazungumzo. Tafadhali nenda kwenye CHAT (kiungo) kukagua ujumbe wako.",
+		"remove_inquiry": "Ondoa Uchunguzi?",
+		"archive_item": "Jalada la Bidhaa",
+		"do_u_really_want_archive_item": "Je! Kweli unataka kuhifadhi kipengee?",
+		"delete_item": "Futa kipengee",
+		"do_u_really_want_delete_item": "Je! Kweli unataka kufuta kipengee?",
+		"plz_upload_png_jpeg": "Tafadhali Pakia faili ya PNG na JPEG",
+		"r_u_sure_want_book_appointment": "Je! Una uhakika unataka kuweka nafasi hii?",
+		"r_u_sure_remove_patient": "Je! Una uhakika wa kumuondoa Mgonjwa?",
+		"cancel_inquiry": "Ghairi Uchunguzi?",
+		"r_u_sure_cancel_inquiry": "Je! Una uhakika wa kughairi uchunguzi huu?",
+		"download_file": "Pakua faili",
+		"consultancy_appintment": "Uteuzi wa Ushauri",
+		"information": "Habari",
+		"visibility": "Mwonekano",
+		"mobile": "rununu",
+		"New": "Mpya",
+		"date": "Tarehe",
+		"details": "Maelezo",
+		"questions": "maswali",
+		"Case": "Kesi",
+		"entry": "kuingia",
+		"traveled": "Alisafiri",
+		"when": "Lini",
+		"Location": "eneo",
+		"neurology": "Neurolojia",
+		"holiday": "Sikukuu",
+		"range": "masafa",
+		"Patient": "Mgonjwa",
+		"facility": "Kituo",
+		"moderate": "Wastani",
+		"confirmed": "Imethibitishwa",
+		"graphs": "Grafu",
+		"all": "Wote",
+		"good": "Nzuri",
+		"poor": "Maskini",
+		"sending": "Inatuma",
+		"document": "Hati",
+		"etc": "na kadhalika.",
+		"values": "Maadili",
+		"notifications": "Arifa"
 	}
 }
