--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1061,6 +1061,80 @@
 		"Select_chat": "Select a chat to start messaging",
 		"Search": "Search",
 		"Date_of_event": "Date of event",
-		"consultancy_appintment": "Consultancy Appointment"
+		"consultancy_appintment": "Consultancy Appointment",
+		"are_u_sue_appo": "Are you sure you want to book this appoinment?",
+		"Appointment": "Appointment",
+		"activities": "Activities",
+		"Upcoming": "Upcoming",
+		"Past": "Past",
+		"google_calendar": "Google Calendar",
+		"outlook_calendar": "Outlook Calendar",
+		"Calendar": "Calendar",
+		"update_the_inquiry": "Update the Inquiry?",
+		"remove_the_inquiry": "Are you sure to remove this Inquiry?",
+		"sick_certificate_inquiry": "Sick Certificate Inquiry",
+		"second_opinion_inquiry": "Second Opinion Inquiry",
+		"medicine_inquiry": "Medicine inquiry",
+		"Approve": "Approve",
+		"decline_inquiry": "Decline Inquiry",
+		"Prescriptions": "Prescriptions",
+		"Sick_Certificates": "Sick Certificates",
+		"Second_Opinions": "Second Opinions",
+		"not_mention": "Not mention",
+		"are_u_sure_patient": "Are you sure to remove the Patient?",
+		"error_in_getting": "Error in getting information",
+		"plz_enter": "Please enter the email or id of the patient",
+		"patient_data_rqust": "Patient Data Request",
+		"email_or_p_id": "Email or Patient ID",
+		"invite_dr_to_aimedis": "Invite doctors to aimedis",
+		"emergency_access": "Emergency Access",
+		"invalid": "invalid ,please enter valid email",
+		"plz_enter_email": "Please enter email",
+		"all_field_complesry": "*All field are compplersury",
+		"track_added": "Track added successfully",
+		"you_can": "You can enter multiple email address by putting ',' and as a personal message",
+		"enter_email_with": "Enter email with , seprator",
+		"shortmsg_optional": "Short message(optional)",
+		"search_pharma": "Search pharmacy by name and ID",
+		"show_pharma": "Show Pharmacy within my radius of",
+		"send_pres": "Send Prescription",
+		"latest_infor": "Latest information",
+		"consultan": "Consultancy(custom calender)",
+		"holidays": "Holidays",
+		"set_working_hours": "set Online working hours",
+		"time_slots": "Timeslots",
+		"Timeslot_duration": "Timeslot duration",
+		"Break_time_from": "Break time from",
+		"Break_time_to": "Break time to",
+		"up_to": "Up to",
+		"before_the": "before the time of appointment",
+		"hours": "hours",
+		"minuts": "minuts",
+		"services_appo": "Services & Appointments",
+		"lock": "Lock",
+		"home": "Home",
+		"chat": "Chat",
+		"chat_call": "Chat & Call",
+		"Courses": "Courses",
+		"Select_place": "Select place",
+		"Search_city": "Search(city)",
+		"plz_enter_correct_pass": "Please Enter Valid Current Password",
+		"can_bot_be_same_pass": "Current password and new password can not be same.",
+		"trusted_doctor": "Trusted Doctor",
+		"recommond_doctor": "Recomended Doctor",
+		"date_from": "Date from",
+		"date_to": "Date to",
+		"pls_fill_duration": "Please fill the Time duration of appointment",
+		"offline": "Offline",
+		"unblock_user": "Unblock User",
+		"block_user": "Block User",
+		"Options": "Options",
+		"had_miss_call_from": " had missed call from ",
+		"had_rejected_call": " had rejected call with ",
+		"had_joined_call_with": " had joined the call with ",
+		"had_initiated_call_with": " had initiated the call with ",
+		"ended_call_with": " ended the call with ",
+		"cancelled_call_with": " cancelled the call with ",
+		"minutes": "minutes"
 	}
 }
