--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1095,6 +1095,7 @@
 		"Select_chat": "Chagua soga ili kuanza kutuma ujumbe",
 		"Search": "Tafuta",
 		"Date_of_event": "Tarehe ya tukio",
-		"consultancy_appintment": "Uteuzi wa Ushauri"
+		"consultancy_appintment": "Uteuzi wa Ushauri",
+		"pin_greater_then_4" : "PIN lazima iwe kubwa zaidi ya herufi 3"
 	}
 }
