--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1127,14 +1127,15 @@
 		"Search": "Suche",
 		"Date_of_event": "Datum der Veranstaltung",
 		"consultancy_appintment": "Beratungstermin",
-		"unblock_user":"Nutzer entblockieren",
-		"block_user":"Benutzer blockieren",
-		"Options":"Optionen",
-		"had_miss_call_from":" hatte Anruf von verpasst ",
+		"unblock_user": "Nutzer entblockieren",
+		"block_user": "Benutzer blockieren",
+		"Options": "Optionen",
+		"had_miss_call_from": " hatte Anruf von verpasst ",
 		"had_rejected_call": " hatte Anruf mit abgelehnt ",
 		"had_joined_call_with": " hatte sich dem Anruf mit angeschlossen ",
 		"had_initiated_call_with": " hatte den Anruf mit initiiert ",
 		"ended_call_with": " beendete den Anruf mit ",
-		"cancelled_call_with": " hat den Anruf mit abgebrochen "
+		"cancelled_call_with": " hat den Anruf mit abgebrochen ",
+		"addentry": "Eintrag hinzufügen"
 	}
 }
